# pdf-analysis

./: .env.example  .gitignore  AGENTS.md  GITHUB_API_GUIDE.md  README.md  check_mendeley_dois.py  check_mendeley_dois_v2.py  clean_marker_output.py  convert_pdfs.sh  convert_pdfs_pymupdf4llm.py  database.rules.json  demo_mendeley_update.html  example_dois.txt  extract_and_check_dois.py  extract_sections.py  firebase-config.example.json  firebase-config.json  mcp-usage-guide.md  mendeley_dois_table.html  mendeley_results.json  mendeley_setup_guide.md  pr_feedback_full.txt  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
files/: Claude_verified_pcm_references_comprehensive.md  Claude_verified_pcm_references_comprehensive.md:Zone.Identifier
tests/: __init__.py  test_check_mendeley_dois.py  test_extract_and_check_dois.py  test_extract_sections.py
