[project]
name = "pdf-analysis"
version = "0.1.0"
requires-python = ">=3.10"

[tool.ruff]
target-version = "py310"
line-length = 88

[tool.ruff.lint]
# E4, E7, E9: pycodestyle errors
# F: pyflakes
# B: flake8-bugbear
# I: isort
select = ["E4", "E7", "E9", "F", "B", "I"]
ignore = ["E501"]  # Line length handled by formatter

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E402"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
disable_error_code = ["import-untyped"]
